--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,19 +1,36 @@
+svg {
+	font-size: 14px;
+}
+
+.label {
+	font-size: 75%;
+}
+
+path,
+circle {
+	fill: none;
+	stroke-width: 1px;
+}
+
 .link {
 	stroke: #555;
-	stroke-width: 1px;
-	fill: none;
+}
+
+.lifeLine {
+	stroke: blue;
 }
 
 .familyArc {
 	stroke: #555;
-	stroke-width: 1px;
-	fill: none;
 }
 
-circle.level {
+path.level {
 	stroke: #bbb;
 	stroke-width: 0.5px;
-	fill: none;
+}
+
+.label {
+	text-anchor: middle;
 }
 
 button {
