--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@ svg {
 .label {
   font-size: 75%; }
 
-path, circle {
+path,
+circle {
   fill: none;
   stroke-width: 1px; }
 
@@ -51,7 +52,8 @@ svg {
 .family .first {
   display: none; }
 
-.person [type='Taken'], .person [type='Inherited'] {
+.person [type='Taken'],
+.person [type='Inherited'] {
   display: none; }
 
 /*# sourceMappingURL=index.css.map */
